--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,3 +12,10 @@
     border: 1px solid black;
     text-align: center;
 }
+#kontak{
+    width: 600px;
+    height: auto;
+    border: 6px dotted #FF0800;
+    padding: 30 px 50px 30px 50px;
+    margin: 0 auto;
+}
